# analize_simba_cgm

./: .gitignore  2MASS_J.res  CAPABILITIES.md  QG_evolution_selection.ipynb  README.md  Resolving_feedbacks_vs_ISM.ipynb  Untitled.ipynb  __init__.py  agn_feedback_view.ipynb  bin_sfh.py  bin_sfh.sh  build_cgm_profiles_job.py  build_cgm_temperature_job.py  build_dust_profiles_job.py  build_profiles_job.py  build_reduced_particles_job.py  cgm_main.ipynb  density.npy  dust_attenuation_vs_bt_z03.ipynb  filter_particle_files.ipynb  filtered_snap149.h5.ewah  filtered_snap44.h5  filtered_snap44.h5.ewah  find_quenchers_fro_almac11.ipynb  galaxy_0_nparts.txt  galaxy_1000_nparts.txt  generate_capabilities_figure.py  gitanalkey  gitanalkey.pub  maiz-apellaniz_Johnson_U.res  maiz-apellaniz_Johnson_V.res  make_sfh.py  merge_cgm_profiles.py  merge_cgm_temperature.py  merge_dust_profiles.py  merge_profiles.py  merger_tracking.ipynb  mergers.ipynb  mergers_all_galaxies.fits  mergers_by_snapshot.fits  (+46 more)
.ipynb_checkpoints/: cgm_main-checkpoint.ipynb  filter_particle_files-checkpoint.ipynb  mock_SED-checkpoint.ipynb  radii_darko-checkpoint.ipynb
analize_simba_cgm.egg-info/: PKG-INFO  SOURCES.txt
analize_simba_cgm_code/io_paths/: savepaths.py  simba.py
dumpster/: analyze_cgm.ipynb  cgm_centrl_gals.ipynb  construct_sfh.ipynb  findsatellites.ipynb  guideclass.ipynb  target_file.h5
dumpster/.ipynb_checkpoints/: construct_sfh-checkpoint.ipynb  guideclass-checkpoint.ipynb
modules/: __init__.py
modules/anal_func/: __init__.py  build_history.py  filter_particles.py  findqt.py  radial_profile.py  read_progenitors.py
modules/data_objects/: __init__.py  convert_hdf5_fits.py
modules/debugging/: __init__.py  debug_funct.py
modules/io_paths/: __init__.py  simba.py
modules/powdermod/: __init__.py  cosmology_setup_all_cluster.cis.sh  cosmology_setup_all_local.pc39.sh  makesed.py  parameters_master.py
modules/visualize/: __init__.py  render_rgb.py  simple_plots.py
simbanator/: __init__.py
simbanator/analysis/: __init__.py  history.py  mergers.py  particles.py  profiles.py  progenitors.py  quenching.py  sfh.py  sfh_caesar.py  sfh_fsps.py
simbanator/data/: __init__.py  convert.py
simbanator/io/: __init__.py  config.py  paths.py  simba.py
tests/: test_io.py
(+44 files in other folders)
