[metadata]
name = analize_simba_cgm
version = 0.1.0
description = The project handles the simba simulation catalogs and particles files making use of caesar and self-made subroutines for plotting and data construction
author = GiulianoLo
author_email = giuliano9797@gmail.com
license = MIT
url = https://github.com/yourusername/project

[options]
packages = find:
package_dir =
    =analize_simba_cgm_code
include_package_data = true
install_requires =
    numpy
    scipy

[options.entry_points]
console_scripts =
    project-main=other_module1.fits_handler:main

